mandoc syntax fix

--- a/ankh.1
+++ b/ankh.1
@@ -26,7 +26,6 @@
 .Ar infile
 .Ar outfile
 .Sh DESCRIPTION
-.Pp
 The
 .Nm
 utility will read from
@@ -43,9 +42,9 @@ The
 .Fl v
 option prints extra details about the operation being performed.
 .Pp
-The key derivation function uses Argon2i. The encryption process uses
-the XSalsa20 stream cipher. Authentication is done with Poly1305 MAC.
-.Pp
+The key derivation function uses Argon2i.
+The encryption process uses the XSalsa20 stream cipher.
+Authentication is done with Poly1305 MAC.
 The options are as follows:
 .Bl -tag -width Ds
 .It Fl d
