change default mode to 2 (moderate)

--- a/ankh.1
+++ b/ankh.1
@@ -57,10 +57,10 @@ Modes for the key derivation function.
 Requires 32 Mb of dedicated RAM
 .It Ar 2
 Requires 128 Mb of dedicated RAM, and takes about 0.7
-seconds on a 2.8 Ghz Core i7 CPU
+seconds on a 2.8 Ghz Core i7 CPU (default)
 .It Ar 3
 Requires 512 Mb of dedicated RAM, and takes about
-3.5 seconds on a 2.8 Ghz Core i7 CPU (default)
+3.5 seconds on a 2.8 Ghz Core i7 CPU
 .El
 .It Fl v
 Produce verbose output.
