--- a/ankh.1
+++ b/ankh.1
@@ -51,7 +51,7 @@ The
 .Nm
 utility will read from stdin and write to stdout.
 The mode of operation is selected with the following options:
-.Bl -tag -width Dssfoo
+.Bl -tag -width Ds
 .It Fl B
 Sealed boxes are designed to anonymously send messages to a recipient
 given its public key.
@@ -84,7 +84,7 @@ Read passphrase from
 .It Fl m Ar mode
 Set the
 .Ar mode
-of the key derivation process.
+of key derivation.
 This is a numerical value from one of the following:
 .Bl -enum
 .It
