update usage, add pub and sec key to manpage

--- a/ankh.1
+++ b/ankh.1
@@ -97,6 +97,10 @@ This is the default mode.
 Sensitive is for highly sensitive data and non-interactive operations.
 This can take about 3.5 seconds and requires 512MB of dedicated RAM.
 .El
+.It Fl p Ar pubkey
+Public key file.
+.It Fl s Ar seckey
+Secret key file.
 .El
 .Sh EXAMPLES
 Encrypt a file using a passphrase:
