--- a/ankh.1
+++ b/ankh.1
@@ -118,10 +118,10 @@ Encrypt a file using sealed box:
 Decrypt a file using sealed box:
 .Dl $ ankh -B -p alice.pub -s alice.sec < ciphertext.file > plaintext.file.2
 .Pp
-Encrypt a file from alice to bob using public key:
+Encrypt a file from Alice to Bob using public key:
 .Dl $ ankh -P -p bob.pub -s alice.sec < plaintext.file > ciphertext.file
 .Pp
-Decrypt a file from alice to bob using public key:
+Decrypt a file from Alice to Bob using public key:
 .Dl $ ankh -P -p alice.pub -s bob.sec < ciphertext.file > plaintext.file.2
 .Sh AUTHORS
 .An Steven Roberts <sroberts@fenderq.com>
