manpage default mode wording

--- a/ankh.1
+++ b/ankh.1
@@ -101,7 +101,7 @@ This is a numerical value from one of the following:
 For interactive, online operations.
 This requires 64 MiB of dedicated RAM.
 .It
-This is the default mode.
+The default mode.
 This requires 256 MiB of dedicated RAM.
 .It
 For highly sensitive data and non-interactive operations.
