update manpage with deprecated info

--- a/ankh.1
+++ b/ankh.1
@@ -135,3 +135,5 @@ Decrypt a file from Alice to Bob using public key:
 .Dl $ ankh -P -p alice.pub -s bob.sec < ciphertext.file > plaintext.file.2
 .Sh AUTHORS
 .An Steven Roberts <sroberts@fenderq.com>
+.Sh CAVEATS
+Deprecated files v2.x.x. Use an older version to decrypt.
